Change actions in DetailsFragment

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,12 @@
     <string name="rent_2">From $1.99</string>
     <string name="buy_1">Buy and Own</string>
     <string name="buy_2">AT $9.99</string>
+
+    <string name="back_1">Voltar</string>
+    <string name="favorite_1">Favoritos</string>
+    <string name="external_link">Ler notícia</string>
+    <string name="next_1">Próxima</string>
+
     <string name="movie">Movie</string>
 
     <!-- Error messages -->
