Improvements on DetailsOverviewRow

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,10 +19,10 @@
     <string name="buy_1">Buy and Own</string>
     <string name="buy_2">AT $9.99</string>
 
-    <string name="back_1">Voltar</string>
+    <string name="back_1">Página Inicial</string>
     <string name="favorite_1">Favoritos</string>
     <string name="external_link">Ler notícia</string>
-    <string name="next_1">Próxima</string>
+    <string name="next_1">Próxima >></string>
 
     <string name="movie">Movie</string>
 
