--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="home">Página inicial</string>
     <string name="next">Avançar &#x3E;&#x3E;&#x3E;</string>
     <string name="previous">&#x3C;&#x3C;&#x3C; Voltar</string>
+    <string name="stop">Parar</string>
     <string name="remove_favorite">Remove favorito</string>
 
     <!-- Error messages -->
